--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,6 @@
     <button id="stopBtn" disabled>Отключиться</button>
     <div id="status">Не подключено</div>
 
-    <script src="client.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
