--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,10 @@
     <button id="startBtn">Подключиться</button>
     <button id="stopBtn" disabled>Отключиться</button>
     <div id="status">Не подключено</div>
+    
+    <!-- Канвас для визуализации уровня громкости -->
+    <canvas id="volumeMeter" width="300" height="50"></canvas>
 
-    <script src="./script.js"></script>
+    <script src="client.js"></script>
 </body>
 </html>
