--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,7 @@
     <button id="startBtn">Подключиться</button>
     <button id="stopBtn" disabled>Отключиться</button>
     <div id="status">Не подключено</div>
-    
-    <!-- Канвас для визуализации уровня громкости -->
-    <canvas id="volumeMeter" width="300" height="50"></canvas>
 
-    <script src="client.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
